// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ThumbsRating StarRating is present 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c2:hover input:not([disabled])+div,
.c2:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

@media only screen and (max-width: 768px) {
  .c7 {
    width: 6px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="ThumbsRating-icon"
      role="radiogroup"
    >
      <label
        class="c2"
        for="like"
      >
        <div
          class="c3 "
        >
          <input
            class="c4"
            id="like"
            name="test"
            tabindex="0"
            type="radio"
            value="like"
          />
          <div
            class="c5 "
          >
            <svg
              aria-label="Like"
              class="c6"
              viewBox="0 0 24 24"
            >
              <path
                d="M1 23h19c2 0 3-1 3-3V10h-7V4c0-2-1-3-3-3h-2s-.016 6-.016 7.326C10.984 9.652 10 11 8 11H1v12zm5 0V11"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </label>
      <div
        class="c7"
      />
      <label
        class="c2"
        for="dislike"
      >
        <div
          class="c3 "
        >
          <input
            class="c4"
            id="dislike"
            name="test"
            tabindex="-1"
            type="radio"
            value="dislike"
          />
          <div
            class="c5 "
          >
            <svg
              aria-label="Dislike"
              class="c6"
              viewBox="0 0 24 24"
            >
              <path
                d="M23 1H4C2 1 1 2 1 4v10h7v6c0 2 1 3 3 3h2s.016-6 .016-7.326C13.016 14.348 14 13 16 13h7V1zm-5 0v12"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`ThumbsRating StarRating renders outside grommet wrapper 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c3 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

@media only screen and (max-width: 768px) {
  .c6 {
    width: 6px;
  }
}

<div
  class="c0"
  role="radiogroup"
>
  <label
    class="c1"
    for="like"
  >
    <div
      class="c2 "
    >
      <input
        class="c3"
        id="like"
        name="test"
        tabindex="0"
        type="radio"
        value="like"
      />
      <div
        class="c4 "
      >
        <svg
          aria-label="Like"
          class="c5"
          viewBox="0 0 24 24"
        >
          <path
            d="M1 23h19c2 0 3-1 3-3V10h-7V4c0-2-1-3-3-3h-2s-.016 6-.016 7.326C10.984 9.652 10 11 8 11H1v12zm5 0V11"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </div>
  </label>
  <div
    class="c6"
  />
  <label
    class="c1"
    for="dislike"
  >
    <div
      class="c2 "
    >
      <input
        class="c3"
        id="dislike"
        name="test"
        tabindex="-1"
        type="radio"
        value="dislike"
      />
      <div
        class="c4 "
      >
        <svg
          aria-label="Dislike"
          class="c5"
          viewBox="0 0 24 24"
        >
          <path
            d="M23 1H4C2 1 1 2 1 4v10h7v6c0 2 1 3 3 3h2s.016-6 .016-7.326C13.016 14.348 14 13 16 13h7V1zm-5 0v12"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`ThumbsRating StarRating should have no accessibility violations 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c2:hover input:not([disabled])+div,
.c2:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

@media only screen and (max-width: 768px) {
  .c7 {
    width: 6px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    >
      <label
        class="c2"
        for="like"
      >
        <div
          class="c3 "
        >
          <input
            class="c4"
            id="like"
            name="test"
            tabindex="0"
            type="radio"
            value="like"
          />
          <div
            class="c5 "
          >
            <svg
              aria-label="Like"
              class="c6"
              viewBox="0 0 24 24"
            >
              <path
                d="M1 23h19c2 0 3-1 3-3V10h-7V4c0-2-1-3-3-3h-2s-.016 6-.016 7.326C10.984 9.652 10 11 8 11H1v12zm5 0V11"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </label>
      <div
        class="c7"
      />
      <label
        class="c2"
        for="dislike"
      >
        <div
          class="c3 "
        >
          <input
            class="c4"
            id="dislike"
            name="test"
            tabindex="-1"
            type="radio"
            value="dislike"
          />
          <div
            class="c5 "
          >
            <svg
              aria-label="Dislike"
              class="c6"
              viewBox="0 0 24 24"
            >
              <path
                d="M23 1H4C2 1 1 2 1 4v10h7v6c0 2 1 3 3 3h2s.016-6 .016-7.326C13.016 14.348 14 13 16 13h7V1zm-5 0v12"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`ThumbsRating value for thumbs 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c8 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c8 g {
  fill: inherit;
  stroke: inherit;
}

.c8 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c8 *[stroke*='#'],
.c8 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c8 *[fill-rule],
.c8 *[FILL-RULE],
.c8 *[fill*='#'],
.c8 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c10 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c10:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c10:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus >circle,
.c10:focus >ellipse,
.c10:focus >line,
.c10:focus >path,
.c10:focus >polygon,
.c10:focus >polyline,
.c10:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus ::-moz-focus-inner {
  border: 0;
}

.c10:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) >circle,
.c10:focus:not(:focus-visible) >ellipse,
.c10:focus:not(:focus-visible) >line,
.c10:focus:not(:focus-visible) >path,
.c10:focus:not(:focus-visible) >polygon,
.c10:focus:not(:focus-visible) >polyline,
.c10:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c4:hover input:not([disabled])+div,
.c4:hover input:not([disabled])+span {
  border-color: #000000;
}

.c6 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    width: 6px;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <label
        class="textRecipe_size_medium"
        style="margin: 6px 12px 6px 12px;"
      >
        test-starRating
      </label>
      <div
        class="c2 "
      >
        <div
          class="c3"
          role="radiogroup"
        >
          <label
            class="c4"
            for="like"
          >
            <div
              class="c5 "
            >
              <input
                class="c6"
                id="like"
                name="test"
                tabindex="0"
                type="radio"
                value="like"
              />
              <div
                class="c7 "
              >
                <svg
                  aria-label="Like"
                  class="c8"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M1 23h19c2 0 3-1 3-3V10h-7V4c0-2-1-3-3-3h-2s-.016 6-.016 7.326C10.984 9.652 10 11 8 11H1v12zm5 0V11"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </label>
          <div
            class="c9"
          />
          <label
            class="c4"
            for="dislike"
          >
            <div
              class="c5 "
            >
              <input
                class="c6"
                id="dislike"
                name="test"
                tabindex="-1"
                type="radio"
                value="dislike"
              />
              <div
                class="c7 "
              >
                <svg
                  aria-label="Dislike"
                  class="c8"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M23 1H4C2 1 1 2 1 4v10h7v6c0 2 1 3 3 3h2s.016-6 .016-7.326C13.016 14.348 14 13 16 13h7V1zm-5 0v12"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
    <button
      class="c10"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;
